--- a/css/style.css
+++ b/css/style.css
@@ -41,15 +41,13 @@ div{
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-width: 0px 0px 2px 5px;
 }
 div.blue{
     background-color:#0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border-width: 2px 5px 0px 0px;
 }
 div.blue p{
     color: #C4C4C4;
@@ -61,8 +59,7 @@ div.yellow{
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-width: 0px 0px 2px 5px;
 }
 div.yellow p{
     color: #707070;
@@ -71,8 +68,7 @@ div.green{
     background-color:  #00EB00;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border-width: 2px 5px 0px 0px;
 }
 footer{
     background: rgb(0,0,0);
