--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ div.yellow p{
     color: #707070;
 }
 div.green{
-    background-color:  #00EB00;
+    background-color:  #008500;
     text-align: left;
     margin-right: 50px;
     border-width: 2px 5px 0px 0px;
@@ -78,7 +78,5 @@ footer{
 footer p{
     font-size: 20px;
     text-align: right;
-    padding-top: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    padding: 15px 15px 15px 0px;
 }
